# tik-giphy

./: .gitignore  Caddyfile  Cargo.toml  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  example.env
.insomnia/ApiSpec/: spc_b186aa2a346b42e29548e565a8150176.yml
.insomnia/Environment/: env_9b4ff05e328f475c95697998523446d4.yml  env_b66dcea3b631d10076db6cf8abea68a3bbf27e36.yml  env_env_b66dcea3b631d10076db6cf8abea68a3bbf27e36_sub.yml
.insomnia/Request/: req_11a1802542c24c178eec6175818da0aa.yml  req_1ab2c123ed714042855f9f1fd5a41b77.yml  req_2651a5b24d3c43939ef83f1f4c8ec893.yml  req_2f28780326144bef80e6bb021cb7d5eb.yml  req_466846ad7a8741658907f96a789eab75.yml  req_509f254861b643d385161b8414ac1293.yml  req_5eca46295b51456a8d28c751092440d1.yml  req_7dc63f724f91439abe6f84ba1a1233a6.yml  req_7e41cd0e045c42c4a652ed8b43dd9910.yml  req_b6f5c6f2c75c4e43af8b38cbf656e2ea.yml  req_c25002537fbb4b3eae6b4affceb046c8.yml  req_dc7b9f1d4c13442c8a5d9168ddd245f1.yml  req_df456c4292524f56afd2bf03169a8bdd.yml  req_ea02eb89cc7d44a5a11b979919603a8e.yml  req_wrk_1c5804cfe6b045949433702a171bcdcd6fee21f0.yml  req_wrk_1c5804cfe6b045949433702a171bcdcd74d41e77.yml  req_wrk_1c5804cfe6b045949433702a171bcdcddfe076dc.yml
.insomnia/RequestGroup/: fld_21abb7afc8d54b29a0418fc19b76fd25.yml  fld_2b81c62f66dd4e80a1fbd375dea1c224.yml  fld_4f84c543458649819e6b468e4a761e14.yml  fld_78a1eb79695c4abb8db4a8bd473be44e.yml  fld_wrk_1c5804cfe6b045949433702a171bcdcd5b7dcd14.yml  fld_wrk_1c5804cfe6b045949433702a171bcdcd66a36e77.yml
.insomnia/UnitTest/: ut_182ec7d2262f4844bd1bcccf2f1f1d72.yml  ut_52708c58cd744060a72d26f2a70423da.yml  ut_56fc1b0240ce41f39e6ab462de28ad83.yml  ut_5b922fc9c17748d3ae1031c7cc2eb05a.yml  ut_5c6838f8ff364725ace590a752bdb9b7.yml  ut_658fad5c10b84387b977d3cd44fc8382.yml  ut_6fa9cb1801224abc80a61838aa334bdc.yml  ut_839110b60a544c8088c2d231927f4bd3.yml  ut_84b2de73cc7740f78c119ed8f0470ea2.yml  ut_88ffe94f3fcc47d5b9a846541e5b01b7.yml  ut_89ab9e0186f0402397bcee499aaf7ae9.yml  ut_984728f2212b4f01b91bea7aa1236786.yml  ut_b771c9c1c371479a9def0104b09cc5ff.yml  ut_c63ab7506f004d8ba9a4ad9e9f4a3455.yml  ut_c9834fc3c81e4fe1b5802db64380269a.yml  ut_d507b4b68c9d49fd984c2e111d90e19f.yml  ut_f3b6810230f940d9a823bb9adc214193.yml
.insomnia/UnitTestSuite/: uts_05a724a4e7a6474c889df8f6ee8b55cd.yml  uts_33b4ada2697d41beb97a1cf6d3689d07.yml  uts_a235cdd97c09417eb70ee7cb7ca08af6.yml  uts_b9ea503e947e45f4ad589912e27e42df.yml
.insomnia/Workspace/: wrk_1c5804cfe6b045949433702a171bcdcd.yml
backend/: .gitignore  Cargo.toml  Dockerfile  README.md
backend/migrations/2021-05-28-123507_define_uuid/: down.sql  up.sql
backend/migrations/2021-05-28-125047_create_users/: up.sql
backend/migrations/2021-05-28-152620_insert_test_users/: down.sql  up.sql
backend/src/: constants.rs  lib.rs  main.rs  schema.rs  types.rs
backend/src/config/: app_config.rs  mod.rs  services_config.rs
backend/src/controllers/: auth_controller.rs  mod.rs  users_controller.rs
backend/src/middlewares/: auth.rs  auth_middleware.rs  mod.rs
backend/src/models/: mod.rs  user.rs  user_model.rs
backend/src/resources/: auth.rs  mod.rs  users.rs
backend/src/services/: auth_service.rs  mod.rs
backend/src/utils/: auth.rs  db_pool.rs  json_api_error.rs  mod.rs  response_bodies.rs  successful_response_body.rs
backend/src/views/: error_res_body.rs  mod.rs  successful_res_body.rs
backend/tests/: get_users.rs
backend/tests/utils/: mod.rs
frontend/: .gitignore  Cargo.toml  Dockerfile
frontend/src/: lib.rs
frontend/src/components/: app.rs  close_button.rs  gif.rs  mod.rs  next_button.rs  prev_button.rs  profile_button.rs  profile_icon.rs  profile_modal.rs  sign_in_form.rs  ui.rs
frontend/src/responses/: gifs_response.rs  mod.rs
frontend/src/utils/: log.rs
frontend/static/: index.css  index.html
