[package]
name = "backend"
version = "0.1.0"
authors = ["Julius Lungys <32368314+voidpumpkin@users.noreply.github.com>"]
edition = "2018"

[package.metadata.commands]
dev = "cargo watch -- docker-compose -f ../docker-compose.yml -f ../docker-compose.override.yml up -V --build backend"
diesel = "docker exec -i -it tg_backend diesel"

## binary cargo dependencies:
# cargo-cmd
# diesel_cli --no-default-features --features postgres

## dev binary cargo dependencies:
# cargo-watch

[dependencies]
actix-service = "0.1.3"
actix-threadpool = "0.3.3"
actix-web = "3.3.2"
actix-web-grants = "2.0.1"
actix-web-httpauth = "0.5.1"
bcrypt = "0.9.0"
chrono = "0.4.19"
diesel = { version = "1.4.6", features = ["postgres", "r2d2", "uuidv07"] }
diesel_migrations = "1.4.0"
env_logger = "0.8.3"
futures = "0.3.15"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
r2d2 = "0.8.9"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
validator = { version = "0.13", features = ["derive"] }
