[package]
name = "frontend"
version = "0.1.0"
authors = ["Julius Lungys <32368314+voidpumpkin@users.noreply.github.com>"]
edition = "2018"

[package.metadata.commands]
start = "miniserve ./build --index index.html"
dev = "cargo watch -- cargo cmd build-dev-and-start"
build = "cargo cmd wasm-build-profiless -- --release"
# These commands are not meant to be used directly
build-dev-and-start = "cargo cmd wasm-build-profiless -- --dev && cargo cmd start"
wasm-build-profiless = "cargo cmd pre-wasm-build && wasm-pack build --target web --out-name index --out-dir ./build --no-typescript"
pre-wasm-build = "rm -fr build && mkdir build && cp static/* build"

[lib]
crate-type = ["cdylib", "rlib"]

## binary cargo dependencies:
# cargo-cmd
# wasm-pack

## dev binary cargo dependencies:
# cargo-watch

[dependencies]
yew = "0.18"
wasm-bindgen = "0.2.74"
anyhow = "1.0.40"
serde = "1.0.126"
