[package]
name = "frontend"
version = "0.1.0"
authors = ["Julius Lungys <32368314+voidpumpkin@users.noreply.github.com>"]
edition = "2018"

[package.metadata.commands]
dev = "cargo watch -- docker-compose -f ../docker-compose.yml -f ../docker-compose.override.yml up -V --build frontend"
# These commands are not meant to be used directly
serve = "miniserve ./build --index index.html"
build-and-serve = "cargo cmd build -- --$WASM_PROFILE && cargo cmd serve"
build = "cargo cmd pre-wasm-build && wasm-pack build --target web --out-name index --out-dir ./build --no-typescript"
pre-wasm-build = "rm -fr build/* && mkdir -p build && cp static/* build"

[lib]
crate-type = ["cdylib", "rlib"]

## binary cargo dependencies:
# cargo-cmd
# wasm-pack
# miniserve

## dev binary cargo dependencies:
# cargo-watch

[dependencies]
yew = "0.18"
wasm-bindgen = "0.2.74"
anyhow = "1.0.40"
serde = "1.0.126"
